<resources>
    <string name="app_name" translatable="false">Milux</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_about">About Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_release_date" translatable="false">2018.10.06</string>
    <string name="level4" translatable="false"><![CDATA[>= 10000 lx]]></string>
    <string name="level3" translatable="false"><![CDATA[>=  1000 lx]]></string>
    <string name="level2" translatable="false"><![CDATA[>=   100 lx]]></string>
    <string name="level1" translatable="false"><![CDATA[>=    10 lx]]></string>
    <string name="level0" translatable="false"><![CDATA[>=     1 lx]]></string>
    <string name="msg_sorry">Sorry\n You don\'t have a light sensor.</string>
    <string name="action_ok" translatable="false">OK</string>
    <string name="action_rate_me">Rate Me</string>
    <string name="label_sampling_number">Sampling Number</string>
    <string name="label_facility">Facility</string>
    <string name="action_default">Default</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_resume">Resume</string>
    <string name="action_pause">Pause</string>
    <string name="action_upload">Upload data</string>
    <string name="label_screen_on">Keep screen on</string>
    <string name="label_azimuth">Azimuth</string>
    <string name="label_light_intensity_max">(Lux is max)</string>
    <string name="label_light_intesity_now">(Now)</string>
    <string name="label_pitch">Pitch</string>
    <string name="labelRoll">Roll</string>
    <string name="label_lux">Lux</string>
    <string name="labelValue">Value</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
